overflow fix

--- a/src/Containers/Header/Header.scss
+++ b/src/Containers/Header/Header.scss
@@ -39,8 +39,7 @@ height: 110vh!important;
 
 .hero-Content{
     z-index: 3;
-    max-width: 1200px;
-    position: absolute;
+    max-width: 1000px;
     padding: 8px 24px;
     display: flex;
     flex-direction: column;
